--- a/style.css
+++ b/style.css
@@ -1,32 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
+/* common style or utilities */
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
+
+.container {
+    width: 1050px;
+    margin-bottom: 100px;
+}
+
+
+/* header style */
+
+.banner-container {
+    margin-bottom: 70px;
+}
+
+.menus {
+    background-color: #2D25A0;
+}
+
+.banner {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 25px;
+}
+
+.banner-title {
+    width: 485px;
+    height: 230px;
+}
+
+.banner-title {
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+}
+
+.watch-button {
+    width: 148px;
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #E02C6D;
+    padding: 10px 24px;
+    text-align: center;
+}
+
+.watch-button a,
+span {
+    text-decoration: none;
+    color: #FFFFFF;
+
+}
+
+.banner-logo img {
+    width: 556.01px;
+    height: 438px;
+}
+
 
 /*-------Players style------
 
 ------------------------------*/
 main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-}
-
-.container {
-    width: 1050px;
+    align-items: center;
 }
 
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    grid-row-gap: 25px;
 }
 
 .player {
     width: 300px;
-    border-color: #ffffff;
     padding: 15px;
+    background-color: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 }
 
@@ -48,3 +105,40 @@ main {
     font-size: 16px;
     color: #6C6C6C;
 }
+
+/* Mid Part */
+
+.highlights-details {
+    display: flex;
+    align-items: center;
+
+}
+
+.highlights-info {
+    width: 469px;
+    margin-right: 66px;
+}
+
+.highlights-info .copa-america {
+    margin: 0;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    color: #0A0826;
+}
+
+.highlights-titles {
+    margin: 8px 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #6C6C6C;
+}
+
+.link {
+    margin: 0;
+}
+
+.highlights-logo img {
+    width: 515px;
+    height: 425px;
